--- a/css/place-kitty.css
+++ b/css/place-kitty.css
@@ -8,7 +8,7 @@
   left: 129px;
 }
 
-#kitty-2/* Select the image with id of kitty-2 */
+/* Select the image with id of kitty-2 */
 
 #kitty-2 {
   position: absolute;
